--- a/README
+++ b/README
@@ -8,7 +8,7 @@ Easy way was to put some SentMailLog.create() in the end of every method of Acti
 
 Right after that I plugged in open_id_authentication which is great but many more issues came out. It appears that my users no longer have emails because they could register with openid and some providers just ignore `required => {:email}`. I had to add "unless User.current_user.openid?" to all of my deliver_* methods.  That's when `before_deliver` saved me. If any of your actions specified in before_deliver method returns false, no email will be sent. But no one cares what your after_deliver returns. It's pretty similar to ActiveRecord's before_save/after_save callbacks.
 
-Many use cases can be found: you can mark your users as bounced if there are problems with their email accounts - no emails should be sent to them. Or you can have `unsubscribe all our news` flag like we have. This can also be verified in "before_deliver".
+Many use cases can be found: you can mark your users as bounced if there are problems with their email accounts - no emails should be sent to them. Or you can have `unsubscribe all our news` flag like we have. This can also be verified in "before_deliver". If you need to access email data just use instance variables inside your callbacks, like @subject, @recipients, @body,etc.
 
 ok, no more words, here is the CODE:
 
@@ -17,12 +17,12 @@ class Notifier < ActionMailer::Base
   after_deliver :save_email
 
   def openid_stub?
-    self.to.to_s.include?('openidstub')
+    @recipients.to_s.include?('openid_stub')
   end
 
   def save_email
     ...
-    SentMailLog.create(:email=>self.to.join(","), :subj => tmail.subject)
+    SentMailLog.create(:email=>@recipients.join(","), :subj => @subject)
   end
 end
 
